[ACTUALIZADO] se agrego una nueva vista que permite navegar por medio de iconos

--- a/ViewCel_y_JsonPlaceHolder/ViewCel_y_JsonPlaceHolder/Base.lproj/Main.storyboard
+++ b/ViewCel_y_JsonPlaceHolder/ViewCel_y_JsonPlaceHolder/Base.lproj/Main.storyboard
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LwX-QC-VLV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CGi-zp-kop">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="3Nl-35-Tr0">
+            <objects>
+                <viewController id="frY-ZJ-vnI" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WLB-np-e0E">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="4SI-F0-bZw"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" systemItem="featured" id="EDM-su-ite"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="76M-ku-uAd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-511" y="-675"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="u1k-oM-lyz">
             <objects>
                 <navigationController id="LwX-QC-VLV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="XIi-At-JUl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="T7O-kI-NEL">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -170,5 +188,28 @@
             </objects>
             <point key="canvasLocation" x="1158.0152671755725" y="17.605633802816904"/>
         </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Cqg-0f-DzF">
+            <objects>
+                <tabBarController id="CGi-zp-kop" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="91C-zo-XlS">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="LwX-QC-VLV" kind="relationship" relationship="viewControllers" id="NCW-ly-uQ4"/>
+                        <segue destination="frY-ZJ-vnI" kind="relationship" relationship="viewControllers" id="7ed-ku-v3U"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RQn-qx-fEM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1524" y="18"/>
+        </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
