--- a/ProyectoFinal/ProyectoFinalIOS/ProyectoFinalIOS/Base.lproj/Main.storyboard
+++ b/ProyectoFinal/ProyectoFinalIOS/ProyectoFinalIOS/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
         <!--Contenidos-->
         <scene sceneID="nRu-30-36L">
             <objects>
-                <collectionViewController id="NYD-bj-8Mm" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="pantalla_de_contenidos" id="NYD-bj-8Mm" customClass="ControladorVistaContenidos" customModule="ProyectoFinalIOS" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="o2a-SD-ICs">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -121,7 +121,7 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Wb5-Ae-3hC" customClass="ControladorVistaContenidos" customModule="ProyectoFinalIOS" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Wb5-Ae-3hC" customClass="VistaDeCelda" customModule="ProyectoFinalIOS" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Gx8-Qx-qrb">
@@ -129,13 +129,19 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4b-hV-9H8">
-                                            <rect key="frame" x="26" y="27" width="62" height="21"/>
+                                            <rect key="frame" x="26" y="27" width="240" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="240" id="fEW-Pu-an8"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.47943383140000001" green="0.81797406459999999" blue="0.72305574480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Origen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I38-jF-igI">
-                                            <rect key="frame" x="31" y="73" width="52" height="21"/>
+                                            <rect key="frame" x="31" y="73" width="89" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="89" id="tWt-9K-HuN"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.47943383140000001" green="0.81797406459999999" blue="0.72305574480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -148,20 +154,22 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6SK-q7-EY4">
-                                            <rect key="frame" x="163" y="72" width="34" height="21"/>
+                                            <rect key="frame" x="163" y="72" width="103" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="103" id="n7u-Id-BgX"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.47943383140000001" green="0.81797406459999999" blue="0.72305574480000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="6SK-q7-EY4" firstAttribute="leading" secondItem="I38-jF-igI" secondAttribute="trailing" constant="80" id="95g-31-csT"/>
                                         <constraint firstItem="H4b-hV-9H8" firstAttribute="leading" secondItem="Gx8-Qx-qrb" secondAttribute="leading" constant="26" id="EXf-qh-RHA"/>
                                         <constraint firstAttribute="bottom" secondItem="I38-jF-igI" secondAttribute="bottom" constant="34" id="OzC-v9-6rM"/>
                                         <constraint firstItem="hom-Yb-ymm" firstAttribute="centerY" secondItem="Gx8-Qx-qrb" secondAttribute="centerY" id="RBF-QX-ssh"/>
                                         <constraint firstItem="H4b-hV-9H8" firstAttribute="top" secondItem="Gx8-Qx-qrb" secondAttribute="top" constant="27" id="aQz-4k-sct"/>
                                         <constraint firstItem="I38-jF-igI" firstAttribute="leading" secondItem="Gx8-Qx-qrb" secondAttribute="leading" constant="31" id="aWs-bt-J8P"/>
-                                        <constraint firstItem="hom-Yb-ymm" firstAttribute="leading" secondItem="6SK-q7-EY4" secondAttribute="trailing" constant="77" id="kCa-eE-Zdp"/>
+                                        <constraint firstItem="6SK-q7-EY4" firstAttribute="leading" secondItem="I38-jF-igI" secondAttribute="trailing" constant="43" id="l0P-X9-5NS"/>
                                         <constraint firstAttribute="bottom" secondItem="6SK-q7-EY4" secondAttribute="bottom" constant="35" id="mtf-Na-bwi"/>
                                         <constraint firstAttribute="trailing" secondItem="hom-Yb-ymm" secondAttribute="trailing" constant="8" id="uPK-wp-NK8"/>
                                     </constraints>
@@ -169,7 +177,10 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <size key="customSize" width="393" height="128"/>
                                 <connections>
-                                    <outlet property="nombre" destination="H4b-hV-9H8" id="Ana-a1-c8B"/>
+                                    <outlet property="como_se_ve" destination="6SK-q7-EY4" id="ufa-ee-6sr"/>
+                                    <outlet property="de_deonde_viene" destination="I38-jF-igI" id="a2P-95-xbm"/>
+                                    <outlet property="nombre" destination="H4b-hV-9H8" id="92w-57-5dw"/>
+                                    <outlet property="retrato" destination="hom-Yb-ymm" id="a9S-CZ-djj"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -178,7 +189,7 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
                             <outlet property="delegate" destination="NYD-bj-8Mm" id="XgZ-pM-ps8"/>
                         </connections>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" title="Contenidos" selectedImage="tablecells.fill" catalog="system" id="nvl-lU-0Nc"/>
+                    <tabBarItem key="tabBarItem" title="Contenidos" image="table.fill" catalog="system" selectedImage="tablecells.fill" id="nvl-lU-0Nc"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7U5-i5-mDU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -239,6 +250,7 @@ Al mismo tiempo podras conocer los distintos tipos de dragones, tal como especie
         <image name="book.pages.fill" catalog="system" width="107" height="128"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="photo.stack.fill" catalog="system" width="126" height="128"/>
+        <image name="table.fill" catalog="system" width="128" height="93"/>
         <image name="tablecells.fill" catalog="system" width="128" height="93"/>
         <systemColor name="systemRedColor">
             <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
